5.0-2 (6/10/2016)
-----
Modifications in tfr.map due to changes in rworldmap 1.3-6:
	- division of the legend colour bar put back to equal units (legendIntervals="page")
	- reflected change in ISO3 code for Western Sahara
	- no need to fix Somaliland anymore

5.0-1 (2/12/2016) [CRAN]
-----
Fixed bug in writing file projection_summary_parameters.csv 
(column TF_time_start_decline was wrongly set to NA if supplemental values were used).

5.0-0 (12/04/2015) [CRAN]
-----
Support for wpp2015 (change in imports and dependencies)

The following defaults in run.tfr.mcmc changed:
	present.year=2015 (from 2010)
	wpp.year=2015 (from 2012)
	start.year=1950 (from 1750)
	
Added dataset include_2015.

Example directory re-created using wpp2015.

DLcurve.plot got an argument "col" for modifying colors.

Function tfr.get.dlcurves can be called without country, in which case it returns the "world" DL curves. 

4.2-0 (7/9/2015) [CRAN]
-----
MCMC outputs now also for back-transformed parameters Triangle_c1-3.

Plotted trajectories are shown in a transparent color.

Imports fixed to comply with the new CRAN policy.

In the manual, a few citations updated.

In tfr.trajectories.plot input to rgb divided by 255 
(it was not working for other color than black - 
thanks to Patrick Gerland for finding the bug and fixing it).

Bug fix in creating thinned MCMCs for extra countries.

Default of b.width in run.tfr.mcmc changed to 0.05
(previous value of 0.02 caused some chains to be stuck)

4.1-0/1 (1/14/2015) [CRAN]
------
Added option of overwriting UNlocations file, i.e. easily include new countries in simulations. 
For this, function run.tfr.mcmc got an argument "my.locations.file".

4.0-11 (11/21/2014) [CRAN]
------
Removed usage of snow functions since CRAN doesn't like them.

4.0-10 (11/19/2014)
------
Fixed bug in imputing values.

Added South Sudan to iso3166; UN code for Sudan updated. 

4.0-8/9 (10/30/2014) [CRAN]
------
Removed 'require' calls.

4.0-7 (10/29/2014) 
------