@@ -1,3 +1,9 @@
+evolutionary-model branch (2016-09-06)
+-----
+Modifications to predict_tfr.R to implement evolutionary algorithm
+
+Modifications to include_2015.txt to simulate continental and world fertility as default.
+
 5.0-2 (6/10/2016)
 -----
 Modifications in tfr.map due to changes in rworldmap 1.3-6:
